src/binding/petsc4py/src/petsc4py/PETSc/petscdmplex.pxi


    PetscErrorCode DMPlexMetricSetFromOptions(PetscDM)
    PetscErrorCode DMPlexMetricSetUniform(PetscDM,PetscBool)
    PetscErrorCode DMPlexMetricIsUniform(PetscDM,PetscBool*)
    PetscErrorCode DMPlexMetricSetIsotropic(PetscDM,PetscBool)
    PetscErrorCode DMPlexMetricIsIsotropic(PetscDM,PetscBool*)
    PetscErrorCode DMPlexMetricSetRestrictAnisotropyFirst(PetscDM,PetscBool)
    PetscErrorCode DMPlexMetricRestrictAnisotropyFirst(PetscDM,PetscBool*)
    PetscErrorCode DMPlexMetricSetNoInsertion(PetscDM,PetscBool)
    PetscErrorCode DMPlexMetricNoInsertion(PetscDM,PetscBool*)
    PetscErrorCode DMPlexMetricSetNoSwapping(PetscDM,PetscBool)
    PetscErrorCode DMPlexMetricNoSwapping(PetscDM,PetscBool*)
    PetscErrorCode DMPlexMetricSetNoMovement(PetscDM,PetscBool)
    PetscErrorCode DMPlexMetricNoMovement(PetscDM,PetscBool*)
    PetscErrorCode DMPlexMetricSetNoSurf(PetscDM,PetscBool)
    PetscErrorCode DMPlexMetricNoSurf(PetscDM,PetscBool*)
    PetscErrorCode DMPlexMetricSetVerbosity(PetscDM,PetscInt)
    PetscErrorCode DMPlexMetricGetVerbosity(PetscDM,PetscInt*)
    PetscErrorCode DMPlexMetricSetNumIterations(PetscDM,PetscInt)
    PetscErrorCode DMPlexMetricGetNumIterations(PetscDM,PetscInt*)
    PetscErrorCode DMPlexMetricSetMinimumMagnitude(PetscDM,PetscReal)
    PetscErrorCode DMPlexMetricGetMinimumMagnitude(PetscDM,PetscReal*)
    PetscErrorCode DMPlexMetricSetMaximumMagnitude(PetscDM,PetscReal)
    PetscErrorCode DMPlexMetricGetMaximumMagnitude(PetscDM,PetscReal*)
    PetscErrorCode DMPlexMetricSetMaximumAnisotropy(PetscDM,PetscReal)
    PetscErrorCode DMPlexMetricGetMaximumAnisotropy(PetscDM,PetscReal*)
    PetscErrorCode DMPlexMetricSetTargetComplexity(PetscDM,PetscReal)
    PetscErrorCode DMPlexMetricGetTargetComplexity(PetscDM,PetscReal*)
    PetscErrorCode DMPlexMetricSetNormalizationOrder(PetscDM,PetscReal)
    PetscErrorCode DMPlexMetricGetNormalizationOrder(PetscDM,PetscReal*)
    PetscErrorCode DMPlexMetricSetGradationFactor(PetscDM,PetscReal)
    PetscErrorCode DMPlexMetricGetGradationFactor(PetscDM,PetscReal*)
    PetscErrorCode DMPlexMetricSetHausdorffNumber(PetscDM,PetscReal)
    PetscErrorCode DMPlexMetricGetHausdorffNumber(PetscDM,PetscReal*)
    PetscErrorCode DMPlexMetricCreate(PetscDM,PetscInt,PetscVec*)
    PetscErrorCode DMPlexMetricCreateUniform(PetscDM,PetscInt,PetscReal,PetscVec*)
    PetscErrorCode DMPlexMetricCreateIsotropic(PetscDM,PetscInt,PetscVec,PetscVec*)
    PetscErrorCode DMPlexMetricDeterminantCreate(PetscDM,PetscInt,PetscVec*,PetscDM*)
    PetscErrorCode DMPlexMetricEnforceSPD(PetscDM,PetscVec,PetscBool,PetscBool,PetscVec,PetscVec)
    PetscErrorCode DMPlexMetricNormalize(PetscDM,PetscVec,PetscBool,PetscBool,PetscVec,PetscVec)
    PetscErrorCode DMPlexMetricAverage2(PetscDM,PetscVec,PetscVec,PetscVec)
    PetscErrorCode DMPlexMetricAverage3(PetscDM,PetscVec,PetscVec,PetscVec,PetscVec)
    PetscErrorCode DMPlexMetricIntersection2(PetscDM,PetscVec,PetscVec,PetscVec)
    PetscErrorCode DMPlexMetricIntersection3(PetscDM,PetscVec,PetscVec,PetscVec,PetscVec)

    PetscErrorCode DMPlexComputeGradientClementInterpolant(PetscDM,PetscVec,PetscVec)

    PetscErrorCode DMPlexTopologyView(PetscDM,PetscViewer)
    PetscErrorCode DMPlexCoordinatesView(PetscDM,PetscViewer)
    PetscErrorCode DMPlexLabelsView(PetscDM,PetscViewer)
    PetscErrorCode DMPlexSectionView(PetscDM,PetscViewer,PetscDM)
    PetscErrorCode DMPlexGlobalVectorView(PetscDM,PetscViewer,PetscDM,PetscVec)
    PetscErrorCode DMPlexLocalVectorView(PetscDM,PetscViewer,PetscDM,PetscVec)

    PetscErrorCode DMPlexTopologyLoad(PetscDM,PetscViewer,PetscSF*)
    PetscErrorCode DMPlexCoordinatesLoad(PetscDM,PetscViewer,PetscSF)
    PetscErrorCode DMPlexLabelsLoad(PetscDM,PetscViewer,PetscSF)
    PetscErrorCode DMPlexSectionLoad(PetscDM,PetscViewer,PetscDM,PetscSF,PetscSF*,PetscSF*)
    PetscErrorCode DMPlexGlobalVectorLoad(PetscDM,PetscViewer,PetscDM,PetscSF,PetscVec)
    PetscErrorCode DMPlexLocalVectorLoad(PetscDM,PetscViewer,PetscDM,PetscSF,PetscVec)

    PetscErrorCode DMPlexTransformApply(PetscDMPlexTransform, PetscDM, PetscDM *);
    PetscErrorCode DMPlexTransformCreate(MPI_Comm, PetscDMPlexTransform *);
    PetscErrorCode DMPlexTransformDestroy(PetscDMPlexTransform*);
    PetscErrorCode DMPlexTransformGetType(PetscDMPlexTransform, PetscDMPlexTransformType *);
    PetscErrorCode DMPlexTransformSetType(PetscDMPlexTransform tr, PetscDMPlexTransformType method);
    PetscErrorCode DMPlexTransformSetFromOptions(PetscDMPlexTransform);
    PetscErrorCode DMPlexTransformSetDM(PetscDMPlexTransform, PetscDM);
    PetscErrorCode DMPlexTransformSetUp(PetscDMPlexTransform);
    PetscErrorCode DMPlexTransformView(PetscDMPlexTransform tr, PetscViewer v);
    